create index.html index.css index.js

--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
-<!doctype html>
-<html lang="en-us">
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-  <title>Abraham Espinosa</title>
+    <title>Home Page | Course Portal </title>
+    <meta name="description" content="Course Portal Home Page WDD 230 - Web Frontend Development at BYU-I" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" /> 
+    <link rel="stylesheet" href="css/index.css" />
 </head>
+
 <body>
- <h1>Abraham Espinosa</h1>
+    <header>
+        <img src="images/abraham-espinosa.jpg" alt="Portrait of Abraham Espinosa" />
+        <h1>Abraham Espinosa G.</h1>
+    </header>
+    <main>
+        <h2>CIT 230: Assigment Portal</h2>
+        <ul>
+            <li>Lesson 02: <a href="#">Assigment Link</a></li>
+            <li>Lesson 03: <a href="#">Assigment Link</a></li>
+            <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
+        </ul>
+    </main>
+    <footer>
+        <p>
+            &copy; <span id="year"></span> | Abraham Espinosa G. | Mexico City | <a href="https://www.byui.edu/online"
+                target="_blank">BYU-I Online Learning</a>
+        </p>
+        <p id="last-update"></p>
+    </footer>
+    <script src="./js/index.js"></script>
 </body>
-</html>  
+
+</html>
