change src of script

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
         <p id="last-update"></p>
     </footer>
-    <script src="./js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
