Create normalize.css and add Google Fonts API

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Course Portal Home Page WDD 230 - Web Frontend Development at BYU-I" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" /> 
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css" />
-</head>
-
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Ramabhadra&display=swap" rel="stylesheet">
 <body>
     <header>
         <img src="images/abraham-espinosa.jpg" alt="Portrait of Abraham Espinosa" />
