--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Home Page | Course Portal </title>
     <meta name="description" content="Course Portal Home Page WDD 230 - Web Frontend Development at BYU-I" />
+    <link  rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" /> 
     <link rel="stylesheet" href="css/normalize.css">
