--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -94,7 +94,7 @@
         <article class="contact-information">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.72628277016!2d-111.91534437280939!3d42.09980531172421!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263%2C%20USA!5e0!3m2!1sen!2smx!4v1612583199708!5m2!1sen!2smx"
-                width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                width="400" height="300" style="border:0;" allowfullscreen="" aria-hidden="false"
                 tabindex="0"></iframe>
             <p>
                 <b>Tell me the Weather</b>
