--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </p>
         <p id="last-update"></p>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/index.js"></script>
 </body>
 
