fixing warning errors

--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -77,8 +77,8 @@
             </table>
         </article>
         <article>
+            <h2>Preston Article</h2>
             <img src="images/article.jpg" alt="family-preston">
-            <p>Preston Article</p>
             <p>Mauris viverra fermentum dui. Aenean eget pretium magna. Vestibulum et ipsum a orci malesuada vulputate.
                 Pellentesque vulputate purus nec ipsum hendrerit, quis sagittis ipsum vehicula. Ut vestibulum diam eget
                 nisi facilisis, bibendum iaculis libero tristique. Vestibulum vestibulum dolor in libero venenatis
@@ -94,21 +94,23 @@
                 tortor, eget rhoncus magna.</p>
         </article>
         <article class="contact-information">
-            <iframe
+            <h2>Contact Information</h2>
+            <div>
+                <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.72628277016!2d-111.91534437280939!3d42.09980531172421!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263%2C%20USA!5e0!3m2!1sen!2smx!4v1612583199708!5m2!1sen!2smx"
                 width="400" height="300" style="border:0;" allowfullscreen="" aria-hidden="false"
                 tabindex="0"></iframe>
-            <p>
-                <b>Tell me the Weather</b>
-                <br>Cel:111-111-111
-                <br>tellmeweather@gmail.com
-                <br>Preston - Idaho
-                <br>
-                <a href="#"><img src="images/facebook.png" alt="logo-facebook"></a>
-                <a href="#"><img src="images/twitter.png" alt="logo-whatsapp"></a>
-                <a href="#"><img src="images/phone.png" alt="logo-twitter"></a>
-            </p>
-
+                <p>
+                    <b>Tell me the Weather</b>
+                    <br>Cel:111-111-111
+                    <br>tellmeweather@gmail.com
+                    <br>Preston - Idaho
+                    <br>
+                    <a href="#"><img src="images/facebook.png" alt="logo-facebook"></a>
+                    <a href="#"><img src="images/twitter.png" alt="logo-whatsapp"></a>
+                    <a href="#"><img src="images/phone.png" alt="logo-twitter"></a>
+                </p>
+            </div>
         </article>
     </main>
     <footer>
