--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
     <main>
         <h2>CIT 230: Assigment Portal</h2>
         <ul>
-            <li>Lesson 02: <a href="#">Assigment Link</a></li>
-            <li>Lesson 03: <a href="#">Assigment Link</a></li>
-            <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
+            <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
+            <li>Lesson 03: <a href="lesson3/index.html">Site Plan</a></li>
+            <li>Lesson 04: <a href="lesson4/preston-4.html">Preston</a></li>
+            <li>Lesson 05: <a href="lesson5/preston-5.html">Preston</a></li>
+            <li>Lesson 06: <a href="lesson6/preston-6.html">Preston</a></li>
+            <li>Lesson 07: <a href="lesson7/gallery-7.html">Gallery</a></li>
+            <li>Lesson 08: <a href="lesson8/stormcenter.html">Storm Center</a></li>
         </ul>
     </main>
     <footer>
