--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -50,6 +50,7 @@
                 <p>Wind Speed: <span id="windspeed">12</span></p>
             </div>
         </div>
+        <div class="cards"></div>
         <article class="forecast">
             <h2>5 Day Forecast</h2>
             <table>
@@ -123,6 +124,7 @@
     <script src="js/windchill.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/webfontload.js"></script>
+    <script src="js/towndata.js"></script>
 </body>
 
 </html>
