--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <li>Lesson 06: <a href="lesson6/preston-6.html">Preston</a></li>
             <li>Lesson 07: <a href="lesson7/gallery-7.html">Gallery</a></li>
             <li>Lesson 08: <a href="lesson8/stormcenter.html">Storm Center</a></li>
+            <li>Lesson 09: <a href="lesson9/index.html">Index</a></li>
+            <li>Lesson 10: <a href="lesson10/preston-10.html">Preston</a></li>
         </ul>
     </main>
     <footer>
