--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -25,15 +25,15 @@
         <ul class="navigation">
             <li><a class="ham" href="#">&#9776; Menu</a></li>
             <li><a href="/lesson11/index.html">Home</a></li>
-            <li><a class="active" href="/lesson11/preston.html">Preston</a></li>
+            <li><a href="/lesson11/preston.html">Preston</a></li>
             <li><a href="/lesson11/sodasprings.html">Soda Springs</a></li>
-            <li><a href="/lesson11/fishhaven.html">Fish Haven</a></li>
+            <li><a class="active" href="/lesson11/fishhaven.html">Fish Haven</a></li>
             <li><a href="/lesson11/stormcenter.html">Storm Center</a></li>
             <li><a href="/lesson11/gallery.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
-        <h2>Preston Idaho</h2>
+        <h2>Fish Haven</h2>
         <div class="hero">
             <picture class="hero">
                 <source srcset="images/smallSky.jpg" media="(max-width: 500px)">
