--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -33,6 +33,7 @@
         </ul>
     </nav>
     <main>
+        <div id="idAPI">Soda Springs</div>
         <h2>Soda Springs</h2>
         <div class="hero">
             <picture class="hero">
@@ -121,7 +122,6 @@
         <p id="date"></p>
     </footer>
     <script src="js/preston.js"></script>
-    <script src="js/windchill.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/webfontload.js"></script>
     <script src="js/towndata.js"></script>
