--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -33,50 +33,14 @@
         </ul>
     </nav>
     <main>
-        <div class="hero">
+        <div id="idAPI">Home</div>
             <picture class="hero">
                 <source srcset="images/smallSky.jpg" media="(max-width: 500px)">
                 <source srcset="images/mediumSky.jpg" media="(max-width: 800px)">
                 <source srcset="images/largeSky.jpg" media="(max-width: 1100px)">
                 <img src="images/largeSky.jpg" alt="preston">
             </picture>
-            <div class="weather-summary">
-                <h3>Weather Summary</h3> 
-                <p>Currently: <span id="currently">N/A</span></p>
-                <img id="icon" src="#" alt="current-weather"> 
-                <p>Temperature: <span id="temp">49</span></p>
-                <p>Wind Chill: <span id="windchill"></span></p>
-                <p>Humidity: <span id="huminity">69%</span></p>
-                <p>Wind Speed: <span id="windspeed">12</span></p>
-            </div>
-        </div>
         <div class="cards"></div>
-        <article class="forecast">
-            <h2>5 Day Forecast</h2>
-            <table>
-                <tr>
-                    <th><span id="day1"></span></th>
-                    <th><span id="day2"></span></th>
-                    <th><span id="day3"></span></th>
-                    <th><span id="day4"></span></th>
-                    <th><span id="day5"></span></th>
-                </tr>
-                <tr>
-                    <td><img id="img1" src="#" alt="img1"></td>
-                    <td><img id="img2" src="#" alt="img1"></td>
-                    <td><img id="img3" src="#" alt="img1"></td>
-                    <td><img id="img4" src="#" alt="img1"></td>
-                    <td><img id="img5" src="#" alt="img1"></td>
-                </tr>
-                <tr>
-                    <td><span id="temp1"></span>&deg; F</td>
-                    <td><span id="temp2"></span>&deg; F</td>
-                    <td><span id="temp3"></span>&deg; F</td>
-                    <td><span id="temp4"></span>&deg; F</td>
-                    <td><span id="temp5"></span>&deg; F</td>
-                </tr>
-            </table>
-        </article>
         <article>
             <h2>Article</h2>
             <img src="images/article.jpg" alt="family-preston">
@@ -121,7 +85,6 @@
         <p id="date"></p>
     </footer>
     <script src="js/preston.js"></script>
-    <script src="js/windchill.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/webfontload.js"></script>
     <script src="js/towndata.js"></script>
