--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -34,29 +34,18 @@
     </nav>
     <main>
         <div id="idAPI">Home</div>
-            <picture class="hero">
-                <source srcset="images/smallSky.jpg" media="(max-width: 500px)">
-                <source srcset="images/mediumSky.jpg" media="(max-width: 800px)">
-                <source srcset="images/largeSky.jpg" media="(max-width: 1100px)">
-                <img src="images/largeSky.jpg" alt="preston">
-            </picture>
+        <picture class="hero">
+            <source srcset="images/home-small.jpg" media="(max-width: 500px)">
+            <source srcset="images/home-medium.jpg" media="(max-width: 800px)">
+            <source srcset="images/home-large.jpg" media="(max-width: 1100px)">
+            <img src="images/home-large.jpg" alt="idaho mountains">
+        </picture>
+        <h2>Get to know our trending towns</h2>
         <div class="cards"></div>
         <article>
-            <h2>Article</h2>
-            <img src="images/article.jpg" alt="family-preston">
-            <p>Mauris viverra fermentum dui. Aenean eget pretium magna. Vestibulum et ipsum a orci malesuada vulputate.
-                Pellentesque vulputate purus nec ipsum hendrerit, quis sagittis ipsum vehicula. Ut vestibulum diam eget
-                nisi facilisis, bibendum iaculis libero tristique. Vestibulum vestibulum dolor in libero venenatis
-                scelerisque. Nullam ut dapibus metus. Sed vestibulum dui at sapien vulputate tristique. Cras mollis
-                consectetur dui, at semper felis faucibus quis. Vestibulum dui massa, consectetur a congue nec, sodales
-                quis velit. Etiam accumsan venenatis tellus, vel condimentum quam interdum non. Vestibulum dapibus eu
-                felis quis semper.</p>
-            <p>Nam eleifend sapien vitae sem commodo, in maximus dui aliquet. Orci varius natoque penatibus et magnis
-                dis parturient montes, nascetur ridiculus mus. Vestibulum rhoncus ac dui eget iaculis. Nunc molestie est
-                at est viverra vehicula. Aenean volutpat sodales commodo. Etiam ac metus a est viverra condimentum at at
-                dolor. Aenean porttitor lacus neque, non dignissim odio commodo quis. Mauris vel lacus elit. Aenean a
-                semper dui. Donec ac risus urna. Aliquam rhoncus dapibus mauris et cursus. Maecenas quis interdum
-                tortor, eget rhoncus magna.</p>
+            <h2>Here's who is currently eligible to get a COVID-19 vaccine in Idaho</h2>
+            <img src="images/article-index.png" alt="family-preston">
+            <p>The new timeline can make it difficult to determine whether you and your loved ones are eligible to receive the vaccine. Here's who is currently eligible, <a href="https://www.ktvb.com/article/news/health/coronavirus/vaccine/idaho-vaccine-eligibility-list-covid/277-daee1748-8afc-4d8a-bc4d-a610afe77f60" target="_blank">click here to read more...</a></p>
         </article>
         <article class="contact-information">
             <h2>Contact Information</h2>
@@ -71,9 +60,9 @@
                     <br>tellmeweather@gmail.com
                     <br>Preston - Idaho
                     <br>
-                    <a href="#"><img src="images/facebook.png" alt="logo-facebook"></a>
-                    <a href="#"><img src="images/twitter.png" alt="logo-whatsapp"></a>
-                    <a href="#"><img src="images/phone.png" alt="logo-twitter"></a>
+                    <a href="#"><img src="images/facebook.png" alt="logo-facebook" target="_blank"></a>
+                    <a href="#"><img src="images/twitter.png" alt="logo-whatsapp" target="_blank"></a>
+                    <a href="#"><img src="images/phone.png" alt="logo-twitter" target="_blank"></a>
                 </p>
             </div>
         </article>
