--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>Preston | Tell me Weather</title>
+    <title>Gallery | Tell me Weather</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Tell me the Weather | Gallery Images" />
+    <meta name="description" content="Weather Forecast, Gallery, Idaho | Tell me the weather" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
