--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -5,7 +5,7 @@
     <title>Preston | Tell me Weather</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Weather Forecast Web Site - Web Frontend Development at BYU-I" />
+    <meta name="description" content="Weather Forecast, Preston, Idaho | Tell me the weather" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
