--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>Preston | Tell me Weather</title>
+    <title>Soda Springs | Tell me Weather</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Weather Forecast Web Site - Web Frontend Development at BYU-I" />
+    <meta name="description" content="Weather Forecast, Soda Springs, Idaho | Tell me the weather" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
