--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -5,7 +5,7 @@
     <title>Storm Center | Tell me Weather</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Tell me the Weather | Storm Center" />
+    <meta name="description" content="Storm Center, Gallery, Idaho | Tell me the weather" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
