fix target attribute

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
     <link rel="stylesheet" href="css/large.css" />
+
 <body>
     <div id="banner">Saturday = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</div>
     <header>
@@ -45,24 +46,27 @@
         <article>
             <h2>Here's who is currently eligible to get a COVID-19 vaccine in Idaho</h2>
             <img src="images/article-index.png" alt="family-preston">
-            <p>The new timeline can make it difficult to determine whether you and your loved ones are eligible to receive the vaccine. Here's who is currently eligible, <a href="https://www.ktvb.com/article/news/health/coronavirus/vaccine/idaho-vaccine-eligibility-list-covid/277-daee1748-8afc-4d8a-bc4d-a610afe77f60" target="_blank">click here to read more...</a></p>
+            <p>The new timeline can make it difficult to determine whether you and your loved ones are eligible to
+                receive the vaccine. Here's who is currently eligible, <a
+                    href="https://www.ktvb.com/article/news/health/coronavirus/vaccine/idaho-vaccine-eligibility-list-covid/277-daee1748-8afc-4d8a-bc4d-a610afe77f60"
+                    target="_blank">click here to read more...</a></p>
         </article>
         <article class="contact-information">
             <h2>Contact Information</h2>
             <div>
                 <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.72628277016!2d-111.91534437280939!3d42.09980531172421!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263%2C%20USA!5e0!3m2!1sen!2smx!4v1612583199708!5m2!1sen!2smx"
-                width="400" height="300" style="border:0;" allowfullscreen="" aria-hidden="false"
-                tabindex="0"></iframe>
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.72628277016!2d-111.91534437280939!3d42.09980531172421!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263%2C%20USA!5e0!3m2!1sen!2smx!4v1612583199708!5m2!1sen!2smx"
+                    width="400" height="300" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
                 <p>
                     <b>Tell me the Weather</b>
                     <br>Cel:111-111-111
                     <br>tellmeweather@gmail.com
                     <br>Preston - Idaho
                     <br>
-                    <a href="#"><img src="images/facebook.png" alt="logo-facebook" target="_blank"></a>
-                    <a href="#"><img src="images/twitter.png" alt="logo-whatsapp" target="_blank"></a>
-                    <a href="#"><img src="images/phone.png" alt="logo-twitter" target="_blank"></a>
+                    <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png" alt="logo-facebook"></a>
+                    <a href="https://twitter.com/" target="_blank"><img src="images/twitter.png" alt="logo-whatsapp"></a>
+                    <a href="#" target="_blank"><img src="images/phone.png" alt="logo-phone"></a>
                 </p>
             </div>
         </article>
