--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -102,9 +102,9 @@
                     <br>tellmeweather@gmail.com
                     <br>Preston - Idaho
                     <br>
-                    <a href="#"><img src="images/facebook.png" alt="logo-facebook"></a>
-                    <a href="#"><img src="images/twitter.png" alt="logo-whatsapp"></a>
-                    <a href="#"><img src="images/phone.png" alt="logo-twitter"></a>
+                    <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png" alt="logo-facebook"></a>
+                    <a href="https://twitter.com/" target="_blank"><img src="images/twitter.png" alt="logo-whatsapp"></a>
+                    <a href="#" target="_blank"><img src="images/phone.png" alt="logo-phone"></a>
                 </p>
             </div>
         </article>
