fix index imgaes issues

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -45,7 +45,7 @@
         <div class="cards"></div>
         <article>
             <h2>Here's who is currently eligible to get a COVID-19 vaccine in Idaho</h2>
-            <img src="images/article-index.png" alt="family-preston">
+            <img src="images/article-index.png" alt="applying COVID-19 vaccine">
             <p>The new timeline can make it difficult to determine whether you and your loved ones are eligible to
                 receive the vaccine. Here's who is currently eligible, <a
                     href="https://www.ktvb.com/article/news/health/coronavirus/vaccine/idaho-vaccine-eligibility-list-covid/277-daee1748-8afc-4d8a-bc4d-a610afe77f60"
