fix alt gallery

--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -36,39 +36,39 @@
         <h2>Gallery</h2>
         <div class="gallery-img">
             <figure >
-                <img src="images/placeholder.png" data-src="images/gallery-1.jpg" alt="nature">
+                <img src="images/placeholder.png" data-src="images/gallery-1.jpg" alt="Soda Springs landscape">
                 <figcaption>Rainbow, Soda Springs</figcaption>
             </figure>
             <figure >
-                <img src="images/placeholder.png" data-src="images/gallery-2.jpg" alt="nature">
+                <img src="images/placeholder.png" data-src="images/gallery-2.jpg" alt="Preston landscape">
                 <figcaption>Sunset, Preston</figcaption>
             </figure>
             <figure>
-                <img src="images/placeholder.png" data-src="images/gallery-3.jpg" alt="img-3">
+                <img src="images/placeholder.png" data-src="images/gallery-3.jpg" alt="Preston landscape">
                 <figcaption>Field, Preston</figcaption>
             </figure>
             <figure>
-                <img src="images/placeholder.png" data-src="images/gallery-4.jpg" alt="img-4">
+                <img src="images/placeholder.png" data-src="images/gallery-4.jpg" alt="Soda Springs landscape">
                 <figcaption>Dawn, Soda Springs</figcaption>
             </figure>
             <figure>
-                <img src="images/placeholder.png" data-src="images/gallery-5.jpg" alt="img-6">
+                <img src="images/placeholder.png" data-src="images/gallery-5.jpg" alt="Soda Springs landscape">
                 <figcaption>Lake, Soda Springs</figcaption>
             </figure>
             <figure>
-                <img src="images/placeholder.png" data-src="images/gallery-6.jpg" alt="img-5">
+                <img src="images/placeholder.png" data-src="images/gallery-6.jpg" alt="Fish Haven landscape">
                 <figcaption>Bridge, Fish Haven</figcaption>
             </figure>
             <figure >
-                <img src="images/placeholder.png" data-src="images/gallery-7.jpg" alt="img-7">
+                <img src="images/placeholder.png" data-src="images/gallery-7.jpg" alt="Fish Haven landscape">
                 <figcaption>Lake, Fish Haven</figcaption>
             </figure>
             <figure>
-                <img src="images/placeholder.png" data-src="images/gallery-8.jpg" alt="img-8">
+                <img src="images/placeholder.png" data-src="images/gallery-8.jpg" alt="Preston landscape">
                 <figcaption>Forest, Preston</figcaption>
             </figure>
             <figure >
-                <img src="images/placeholder.png" data-src="images/gallery-9.jpg" alt="img-9">
+                <img src="images/placeholder.png" data-src="images/gallery-9.jpg" alt="Preston landscape">
                 <figcaption>Forest, Preston</figcaption>
             </figure>
         </div>
