create Final Project

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -36,10 +36,10 @@
     <main>
         <div id="idAPI">Home</div>
         <picture class="hero">
-            <source srcset="images/home-small.jpg" media="(max-width: 500px)">
-            <source srcset="images/home-medium.jpg" media="(max-width: 800px)">
-            <source srcset="images/home-large.jpg" media="(max-width: 1100px)">
-            <img src="images/home-large.jpg" alt="idaho mountains">
+            <source srcset="images/home-hero.jpg" media="(max-width: 500px)">
+            <source srcset="images/home-hero.jpg" media="(max-width: 800px)">
+            <source srcset="images/home-hero.jpg" media="(max-width: 1100px)">
+            <img src="images/home-hero.jpg" alt="idaho mountains">
         </picture>
         <h2>Get to know our trending towns</h2>
         <div class="cards"></div>
