changin name index for home

--- a/finalProject/home.html
+++ b/finalProject/home.html
@@ -24,7 +24,7 @@
     <nav>
         <ul class="navigation">
             <li><a class="ham" href="#">&#9776; Menu</a></li>
-            <li><a class="active" href="index.html">Home</a></li>
+            <li><a class="active" href="home.html">Home</a></li>
             <li><a href="mexicocity.html">Mexico City</a></li>
             <li><a href="join.html">Join us</a></li>
             <li><a href="directory.html">Directory</a></li>
