--- a/finalProject/contact.html
+++ b/finalProject/contact.html
@@ -66,7 +66,7 @@
     </main>
     <footer>
         <p>
-            &copy; Mexico Trade | Mexico City </a>
+            &copy; Mexico Trade | Mexico City 
         </p>
         <p id="date"></p>
     </footer>
