--- a/finalProject/join.html
+++ b/finalProject/join.html
@@ -71,7 +71,7 @@
     </main>
     <footer>
         <p>
-            &copy; Mexico Trade | Mexico City </a>
+            &copy; Mexico Trade | Mexico City 
         </p>
         <p id="date"></p>
     </footer>
