--- a/finalProject/thanks.html
+++ b/finalProject/thanks.html
@@ -37,7 +37,7 @@
     </main>
     <footer>
         <p>
-            &copy; Mexico Trade | Mexico City </a>
+            &copy; Mexico Trade | Mexico City 
         </p>
         <p id="date"></p>
     </footer>
