adjust link Mexico Businesses

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div>
             <h2>Recent Projects</h2>
             <ul>
-                <li><a href="finalProject/home.html">Mexico Businesses</a></li>
+                <li><a href="finalProject/home.html" target="_blank">Mexico Businesses</a></li>
                 <li>Palmar</li>
             </ul>
         </div>
