index page and update photo

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta charset="UTF-8" /> 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
     <header>
-        <img src="images/abraham-espinosa.jpg" alt="Portrait of Abraham Espinosa" />
+        <img src="images/abraham-espinosa.jpeg" alt="Portrait of Abraham Espinosa" />
         <h1>Abraham Espinosa Gutiérrez</h1>
-        <h3>Software Engineer</h3>
+        <p class="subtitle">Software Engineer</p>
     </header>
     <main>
         <div>
@@ -37,8 +37,14 @@
             <h2>Recent Projects</h2>
             <ul>
                 <li><a href="finalProject/home.html" target="_blank">Mexico Businesses</a></li>
-                <li>Palmar</li>
+                <li><a href="https://palmar-shop.onrender.com/" target="_blank">Palmar</a></li>
             </ul>
+        </div>
+        <div>
+            <h2>Education</h2>
+            <p>Bachelor of Applied Science in Applied Technology</p>
+            <p>Brigham Young University – Idaho | Mar 2018 – Jul 2023</p>
+            <p>Certificate (Minor): Database</p>
         </div>
     </main>
     <footer>
