--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div>
             <h2>Recent Projects</h2>
             <ul>
+                <li><a href="#" target="_blank">Top Movies</a></li>
                 <li><a href="finalProject/home.html" target="_blank">Mexico Businesses</a></li>
                 <li><a href="https://palmar-shop.onrender.com/" target="_blank">Palmar</a></li>
             </ul>
