Update index file

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
-    <header>
-        <img src="images/abraham-espinosa.jpeg" alt="Portrait of Abraham Espinosa" />
-        <h1>Abraham Espinosa Gutiérrez</h1>
-        <p class="subtitle">Software Engineer</p>
+    <header class="wrapper">
+        <div class="item">
+            <h1>Abraham Espinosa Gutiérrez</h1>
+            <p class="subtitle">Software Engineer Graduate</p>  
+        </div>
+        <div class="item">
+            <img src="images/abraham-espinosa.jpeg" alt="Portrait of Abraham Espinosa" />
+        </div>
     </header>
     <main>
-        <div>
+        <article>
             <h2>About Me</h2>
             <ul>
                 <li>Software engineering graduate with a firm understanding of programming and design principles, looking 
@@ -27,26 +31,42 @@
                 <li> Convert software requirements into operational code to pass and obtain data from a server including Java
                     and JavaScript.</li>
             </ul>
-        </div>
-        <div>
+        </article>
+        <article>
             <h2>Skills</h2>
             <p>Proficiency in HTML/CSS, JavaScript, SQL, Java, and Spring</p>
             <p>Familiar with Python and PHP.</p>
-        </div>
-        <div>
+        </article>
+        <article>
             <h2>Recent Projects</h2>
             <ul>
-                <li><a href="https://abrahameg-movies.onrender.com" target="_blank">Top Movies</a></li>
-                <li><a href="finalProject/home.html" target="_blank">Mexico Businesses</a></li>
-                <li><a href="https://palmar-shop.onrender.com/" target="_blank">Palmar</a></li>
+                <li><a href="https://abrahameg-movies.onrender.com" target="_blank">
+                        <b>Disney Movies API</b>
+                    </a>
+                    </br>Description: Get access to top disney movies of all-time and create reviews for each movie
+                    </br>Technologies: Java, Spring Boot & MongoDB 
+                </li>
+                <li>
+                    <a href="finalProject/home.html" target="_blank">
+                        <b>Mexico Businesses</b>
+                    </a>
+                    </br>Description: Static website
+                    </br>Technologies: JavaScript, HTML & CSS
+                </li>
+                <li><a href="https://palmar-shop.onrender.com/" target="_blank">
+                    <b>Palmar Shop</b>
+                </a>
+                </br>Description: Second-hand shop 
+                </br>Technologies: JavaScript, Node.js, Express.js & MongoDB
+            </li>
             </ul>
-        </div>
-        <div>
+        </article>
+        <article>
             <h2>Education</h2>
             <p>Bachelor of Applied Science in Applied Technology</p>
             <p>Brigham Young University – Idaho | Mar 2018 – Jul 2023</p>
             <p>Certificate (Minor): Database</p>
-        </div>
+        </article>
     </main>
     <footer>
         <p>
