--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li><a href="https://abrahameg-movies.onrender.com" target="_blank">
                         <b>Disney Movies API</b>
                     </a>
-                    </br>Description: Get access to top disney movies of all-time and create reviews for each movie
+                    </br>Description: API tha gets top disney movies and create reviewes
                     </br>Technologies: Java, Spring Boot & MongoDB 
                 </li>
                 <li>
@@ -56,7 +56,7 @@
                 <li><a href="https://palmar-shop.onrender.com/" target="_blank">
                     <b>Palmar Shop</b>
                 </a>
-                </br>Description: Second-hand shop 
+                </br>Description: Web application for a small business. It sells second-hand products, accepts payment, and manage purchases 
                 </br>Technologies: JavaScript, Node.js, Express.js & MongoDB
             </li>
             </ul>
