--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
                 <li><a href="https://abrahameg-movies.onrender.com" target="_blank">
                         <b>Disney Movies API</b>
                     </a>
-                    </br>Description: API tha gets top disney movies and create reviewes
+                    </br>Description: API that gets top disney movies and can create reviews.
                     </br>Technologies: Java, Spring Boot & MongoDB 
                 </li>
                 <li>
                     <a href="finalProject/home.html" target="_blank">
-                        <b>Mexico Businesses</b>
+                        <b>Mexico City</b>
                     </a>
-                    </br>Description: Static website
+                    </br>Description: Website for my local city that promotes the area's attractions, fosters business networking, and attracts additional business and people.
                     </br>Technologies: JavaScript, HTML & CSS
                 </li>
                 <li><a href="https://palmar-shop.onrender.com/" target="_blank">
                     <b>Palmar Shop</b>
                 </a>
-                </br>Description: Web application for a small business. It sells second-hand products, accepts payment, and manage purchases 
+                </br>Description: Web application for a small business that sells second-hand products, accepts payment, and manage purchases.
                 </br>Technologies: JavaScript, Node.js, Express.js & MongoDB
             </li>
             </ul>
