--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <title>Abraham Espinosa Gutiérrez | Portafolio </title>
     <meta name="description" content="Abraham Espinosa Gutiérrez Portafolio" />
-    <link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" /> 
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+
+<body>
     <header class="wrapper">
         <div class="item">
             <h1>Abraham Espinosa Gutiérrez</h1>
@@ -37,29 +39,11 @@
             <p>Proficiency in HTML/CSS, JavaScript, SQL, Java, and Spring</p>
             <p>Familiar with Python and PHP.</p>
         </article>
+        
+
         <article>
             <h2>Recent Projects</h2>
-            <ul>
-                <li><a href="https://abrahameg-movies.onrender.com" target="_blank">
-                        <b>Disney Movies API</b>
-                    </a>
-                    </br>Description: API that gets top disney movies and can create reviews.
-                    </br>Technologies: Java, Spring Boot & MongoDB 
-                </li>
-                <li>
-                    <a href="finalProject/home.html" target="_blank">
-                        <b>Mexico City</b>
-                    </a>
-                    </br>Description: Website for my local city that promotes the area's attractions, fosters business networking, and attracts additional business and people.
-                    </br>Technologies: JavaScript, HTML & CSS
-                </li>
-                <li><a href="https://palmar-shop.onrender.com/" target="_blank">
-                    <b>Palmar Shop</b>
-                </a>
-                </br>Description: Web application for a small business that sells second-hand products, accepts payment, and manage purchases.
-                </br>Technologies: JavaScript, Node.js, Express.js & MongoDB
-            </li>
-            </ul>
+            <div class="cards"></div>
         </article>
         <article>
             <h2>Education</h2>
